# mcmanage

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
libs/common/: Cargo.toml
libs/common/src/: database_server.rs  lib.rs  log.rs  mcmanage_error.rs  status.rs  test_functions.rs  types.rs
libs/common/src/communicator/: client_type.rs  mod.rs
libs/common/src/communicator/message/: message_type.rs  mod.rs
libs/common/src/communicator/message/command/: error.rs  get_type.rs  mod.rs  permission.rs  set_id.rs
libs/common/src/concurrent_class/: check_allowed.rs  mod.rs
libs/common/src/config/: config_default.rs  mod.rs  tests.rs
libs/common/src/generated_files/: mod.rs  paths.rs
libs/common/src/generated_files/default_files/: example_server_list.rs  mod.rs  valid_config.rs  valid_mcserver_types.rs  valid_server_types.rs
libs/common/src/generated_files/load_toml_file/: mod.rs  tests.rs
libs/common/src/mcserver_manager/: mod.rs  server_item.rs  server_list_example_default.rs  tests.rs
libs/common/src/mcserver_manager/mcserver/: mod.rs  tests.rs
libs/common/src/mcserver_manager/mcserver/mcserver_type/: mcserver_types_default.rs  mod.rs  tests.rs
libs/common/src/qol/: log.rs  mod.rs  write_to_log_file.rs
libs/common/src/qol/load_json_file/: mod.rs  tests.rs
libs/common/src/qol/load_toml_file/: mod.rs  tests.rs
libs/common/src/qol/log/: helper.rs  mod.rs
libs/common/src/rest_api/: server_data.rs
libs/common/src/server_manager/: mod.rs  server_item.rs  tests.rs
libs/common/src/server_manager/server/: mod.rs  tests.rs
libs/common/src/server_manager/server/mcserver_type/: mod.rs  tests.rs
libs/common/src/server_manager/server_list/: mod.rs  server_data.rs
libs/proc_macros/: Cargo.toml
libs/proc_macros/src/: concurrent_class.rs  convert.rs  lib.rs  match_command.rs  toml_convert.rs
src/: main.rs  test_functions.rs
src/communicator/: mod.rs  tests.rs
src/communicator/intercom/: mod.rs  tests.rs
src/communicator/reserved_connections/: connection.rs  mod.rs
src/serve_frontend/: index.rs  mod.rs  remaining.rs  rest_api.rs
src/serve_frontend/api/: mod.rs
src/serve_frontend/api/server/: mod.rs
src/serve_frontend/api/server/actions/: mod.rs  restart.rs  start.rs  stop.rs
src/serve_frontend/api/server/console/: get_log.rs  latest_log.rs  mod.rs  send_input.rs
src/serve_frontend/api/server/info/: get_list.rs  get_player_cap.rs  get_player_count.rs  get_server_type.rs  get_status.rs  get_version.rs  latest_list.rs  latest_player_cap.rs  latest_player_count.rs  latest_server_type.rs  latest_status.rs  latest_version.rs  mod.rs
