[package]
name = "mcmanage"
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
common = { path="libs/common" }
async-recursion = "1.0.4"
async-trait = "0.1.67"
axum = "0.6.11"
ctrlc = "3.2.5"
include_dir = "0.7.3"
thiserror = "1.0.40"
tokio = { version="1.26.0", features=["full"]}
tower = "0.4.13"
tower-http = { version="0.4.0", features=["full"] }
proc_macros ={ path = "libs/proc_macros"}


[workspace]
members = ["libs/common", "libs/proc_macros"]
exclude = ["frontend"]

[workspace.package]
authors = ["Gooxey"]
description = "TODO"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
rust-version = "1.67.1"
publish = false
repository = "https://github.com/Gooxey/MCManage.git"
version = "0.1.0"
