[package]
name = "mcmanage"
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
async-recursion = "1.0.4"
async-trait = "0.1.67"
axum = { version = "0.6.11", features = ["headers"] }
chrono = "0.4.24"
common = { path="libs/common" }
ctrlc = "3.2.5"
fern = { version = "0.6.2", features = ["colored"] }
futures = "0.3.28"
include_dir = "0.7.3"
lazy_static = "1.4.0"
log = "0.4.17"
mime_guess = "2.0.4"
proc_macros ={ path = "libs/proc_macros"}
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.95"
thiserror = "1.0.40"
tokio = { version="1.28.2", features=["full"]}
tokio-util = "0.7.7"
tower = "0.4.13"
tower-http = { version="0.4.0", features=["full"] }
goolog = "0.7.0"
# goohttp = "0.4.1"
goohttp ={ path = "../../_libs/goohttp" }
serde_with = "3.0.0"
once_cell = "1.18.0"

[build-dependencies]
winres = "0.1.12"


[workspace]
members = ["libs/common", "libs/proc_macros"]
exclude = ["bin/frontend"]

[workspace.package]
authors = ["Gooxey"]
description = "This application is aiming to make the creation and management of Minecraft servers as easy as possible."
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
rust-version = "1.67.1"
publish = false
repository = "https://github.com/Gooxey/MCManage.git"
version = "0.1.0"
