[package]
name = "common"
workspace = "../../"
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
async-recursion = "1.0.2"
async-trait = "0.1.66"
chrono = "0.4.23"
proc_macros = { path="../proc_macros"}
rand = "0.8.5"
serde = { version = "1.0.155", features = ["derive"] }
system_shutdown = "4.0.1"
thiserror = "1.0.39"
tokio = { version="1.26.0", features=["full"] }
toml = "0.7.3"

[dev-dependencies]
reqwest = { version="0.11", features=["blocking"] }
