[package]
name = "common"
workspace = "../../"
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
async-recursion = "1.0.2"
async-trait = "0.1.66"
async_once = "0.2.6"
chrono = "0.4.23"
dunce = "1.0.3"
futures-util = "0.3.27"
lazy_static = "1.4.0"
log = "0.4.17"
notify = { version = "5.1.0", default-features = false, features = ["serde", "macos_kqueue"] }
proc_macros = { path="../proc_macros"}
rand = "0.8.5"
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.95"
system_shutdown = "4.0.1"
thiserror = "1.0.39"
tokio = { version="1.26.0", features=["full"] }
toml = "0.7.3"

[dev-dependencies]
fern = { version="0.6.2", features=["colored"] }
