[package]
name = "common"
workspace = "../../"
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true


[features]
default = ["dep:async-recursion", "dep:async-trait", "dep:async_once", "dep:dunce", "dep:futures-util", "dep:lazy_static", "dep:log", "dep:notify", "dep:reqwest", "dep:system_shutdown", "dep:tokio"]
frontend = []


[dependencies]
async-recursion = { version = "1.0.4", optional = true }
async-trait = { version = "0.1.68", optional = true }
async_once = { version = "0.2.6", optional = true }
chrono = { version = "0.4.26", features = ["serde", "wasmbind"] }
dunce = { version = "1.0.3", optional = true }
futures-util = { version = "0.3.27", optional = true }
instant = "0.1.12"
lazy_static = { version = "1.4.0", optional = true }
log = { version = "0.4.17", optional = true }
notify = { version = "6.0.1", optional = true, default-features = false, features = ["serde", "macos_kqueue"] }
proc_macros = { path="../proc_macros"}
reqwest = { version = "0.11", optional = true, features = ["stream"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.95"
serde_with = "3.0.0"
system_shutdown = { version = "4.0.1", optional = true }
thiserror = "1.0.39"
tokio = { version="1.29.1", optional = true, features=["full"] }
toml = "0.7.3"
goolog = "0.8.1"
# rusqlite = { version = "0.29.0", features = ["backup"] }
# goolog ={ path = "../../../../_libs/goolog" }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres", "macros"] }
pg-embed = "0.6"
rand = "0.8.5"
once_cell = "1.18.0"

[dev-dependencies]
fern = { version="0.6.2", features=["colored"] }
