[package]
name = "proc_macros"
workspace = "../../"
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
syn = "1.0.109"
tokio = "1.26.0"