[package]
name = "proc_macros"
workspace = "../../"
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.52"
quote = "1.0.26"
syn = "2.0.3"